--- a/HTML/Odev1/HTMLOdev1.html
+++ b/HTML/Odev1/HTMLOdev1.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sayfa Başlığı</title>
-</head>
-<body>
-    
+  </head>
+  <body>
     <h1>Yusuf Tekin</h1>
     <h3>Hakkımda</h3>
     <p>Merhaba ben Yusuf. Yazılımı çok severek öğreniyorum.</p>
-    <br/>
+    <br />
 
     <h3>Sevdiğim Diller</h3>
     <p>Java</p>
@@ -19,5 +18,35 @@
     <p>HTML</p>
     <p>CSS</p>
     <p>...</p>
-</body>
+
+    <h3>İlgi Alanlarım</h3>
+
+    <ol>
+      <li>
+        <h4>Kitap</h4>
+        <ul type="square">
+          <li>Einstein Hayatı</li>
+          <li>Java Programlama</li>
+          <li><a target="_blank" href="https://www.goodreads.com/book/show/783510.Nutuk?from_search=true&from_srp=true&qid=WFOnB2VetG&rank=1">Nutuk</a></li>
+        </ul>
+      </li>
+      <li>
+        <h4>Film</h4>
+        <ul type="square">
+          <li>Kingsman: Gizli Servis</li>
+          <li>Hızlı Ve Öfkeli 6</li>
+          <li><a href="https://www.imdb.com/find?q=%C3%96l%C3%BCmc%C3%BCl+Deney+3&ref_=nv_sr_sm" target="_blank">Ölümcül Deney 3</a></li>
+        </ul>
+      </li>
+      <li>
+        <h4>Dizi</h4>
+        <ul type="square">
+          <li>Söz</li>
+          <li>Arka Sokaklar</li>
+          <li>Teşkilar</li>
+        </ul>
+      </li>
+    </ol>
+    <img src = "https://www.justwatch.com/images/backdrop/8690049/s1920/olumcul-deney-3-insanligin-sonu.webp" alt="Ölümcül Deney 3 Kapak" title="Ölümcül Deney 3" width="720">
+  </body>
 </html>
